# archub_cms

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  EXTRACTION.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE_NOTES.md  docker-compose.yml  mkdocs.yml  properdocs.yml  pyproject.toml
.claude/: settings.json
.claude/skills/checks/: SKILL.md
.github/workflows/: ci.yml  pages.yml
demo_site/: index.html  styles.css
deploy/kubernetes/: archub-platform.yaml
docs/: architecture.md  comparison.md  content-builder.md  delivery-api.md  demo-site.md  getting-started.md  index.md  release-notes.md  use-cases.md
docs/architecture/: advanced-cms-refactor.md  archub-core-platform.md  c4-model.md  capability-matrix.md  content-modeling.md  contexts.md  delivery-contracts.md  diagrams.md  enterprise-knowledge-platform.md  governance-access.md  media-dam.md  module-marketplace.md  package-promotion.md  plugin-platform-adapter.md  publishing-workflow.md  runtime-and-data.md  versioning-cleanup.md  webhook-integrations.md
docs/assets/stylesheets/: archub.css
docs/capabilities/: index.md  itsm.md  plugins.md
docs/deployment/: docker.md  github-pages.md  kubernetes.md  local.md  release-artifacts.md  scenarios.md
docs/diagrams/archi/: archimate-view.puml  elements.csv  relationships.csv
docs/diagrams/c4/: component-itsm.puml  container.puml  context.puml
docs/handbook/: docs-as-code.md
docs/plugins/: archub-olo-php.md  archub-ru-wiki-php.md  index.md  release-distributions.md
docs/reference/: api.md  configuration.md  tags.md
docs/sdk/: platform-sdk.md
lite/archub-lite-php/: .gitignore  README.md  config.php.example
lite/archub-lite-php/src/: App.php
plugins/: README.md
plugins/archub_olo_php/: .env.example  Dockerfile  README.md  composer.json  openapi.yaml  plugin.json
plugins/archub_ru_wiki_php/: .env.example  Dockerfile  README.md  composer.json  openapi.yaml  plugin.json
plugins/bpmn_editor/: plugin.json
plugins/console_channel/: plugin.json
plugins/content_macros/: plugin.json
plugins/example_backlinks/: plugin.json
plugins/example_notifications/: plugin.json
plugins/header_auth/: plugin.json
plugins/itsm_service_desk/: plugin.json
plugins/markdown_importer/: plugin.json
plugins/storage_backends/: plugin.json
plugins/summarize_tool/: plugin.json
plugins/vault_exporter/: plugin.json
rust/archub-adapters/: Cargo.toml
rust/archub-automation-core/: Cargo.toml
rust/archub-cms-core/: Cargo.toml
rust/archub-collaboration-core/: Cargo.toml
rust/archub-core/: Cargo.toml
rust/archub-governance-core/: Cargo.toml
rust/archub-knowledge-core/: Cargo.toml
rust/archub-llm-core/: Cargo.toml
rust/archub-media-core/: Cargo.toml
rust/archub-rest-api/: Cargo.toml
rust/archub-search-core/: Cargo.toml
rust/archub-workflow-core/: Cargo.toml
sdk/: README.md
sdk/openapi/: archub-platform-sdk.openapi.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/archub_platform_sdk/: __init__.py  client.py  models.py  plugins.py  release.py
sdk/release/: archub-sdk-1.0.0.json
src/archub_cms/: __init__.py  app.py  demo.py  ports.py  published.py  settings.py
tests/: test_admin_dashboard.py  test_agent.py  test_analytics.py  test_architecture_facades.py  test_blueprints.py  test_circuit_breaker.py  test_cms_characterization.py  test_collaboration.py  test_core_platform_plugins.py  test_delivery.py  test_end_to_end.py  test_extensions.py  test_fts_search.py  test_governance.py  test_graph.py  test_ingestion.py  test_itsm_service_desk.py  test_kernel_expansion.py  test_kernel_new.py  test_localization.py  test_locks.py  test_media.py  test_modeling.py  test_module_distributions.py  test_new_domains.py  test_new_domains_expansion.py  test_new_services.py  test_new_services_expansion.py  test_packaging.py  test_php_wiki_plugin.py  test_platform.py  test_platform_facade.py  test_platform_index.py  test_platform_sdk_release.py  test_plugin_management.py  test_runtime.py  test_search.py  test_standalone_release.py  test_subscriptions.py  test_trash.py  (+3 more)
(+408 files in other folders)
