[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archub-platform-sdk"
version = "1.0.0"
description = "Typed Python SDK for ArcHub platform APIs, plugins and marketplace modules."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ArcHub contributors" }]
keywords = ["archub", "cms", "wiki", "plugins", "sdk", "knowledge-platform"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["archub_platform_sdk*"]
